Fixing stylesheet linking issues

--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@
     background-repeat: no-repeat;
     font-family: 'IM Fell English', serif;
     font-size: 20px;
-    color: ivory;
+    color: rgb(240, 255, 250);
     text-align: left;
     
 }
