--- a/tech2.css
+++ b/tech2.css
@@ -10,7 +10,7 @@ html {
     background-image: url("images/blogbckgr3.jpg");
     height: 100%;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 
