--- a/main.css
+++ b/main.css
@@ -34,69 +34,54 @@
     column-gap: normal;
 }
 .col-tech1 {
-    width: 33.33%;
-    background-image: url(images/tech.jpg);
-    background-size: 80%;
-    background-repeat: no-repeat;
+    width: 20%;
     font-family: 'IM Fell English', serif;
-    font-size: 20px;
-    color: ivory;
-    text-align: left;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    text-align: center;
     
 }
 .col-tech2 {
-    width: 33.33%;
-    background-image: url(images/technology1.jpg);
-    background-size: 80%;
-    background-repeat: no-repeat;
+    width: 20%;
     font-family: 'IM Fell English', serif;
-    font-size: 20px;
-    color: ivory;
-    text-align: left;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    text-align: center;
     
 }
 .col-tech3 {
-    width: 33.33%;
-    background-image: url(images/technology2.jpg);
-    background-size: 80%;
-    background-repeat: no-repeat;
+    width: 20%;
     font-family: 'IM Fell English', serif;
-    font-size: 20px;
+    font-size: 30px;
     color: ivory;
-    text-align: left;
+    text-align: center;
     
 }
 .col-core1 {
-    width: 33.33%;
-    background-image: url(images/core1.jpg);
-    background-size: 80%;
-    background-repeat: no-repeat;
+    width: 20%;
+   
     font-family: 'IM Fell English', serif;
     font-size: 20px;
     color: ivory;
-    text-align: left;
+    text-align: center;
     
 }
 .col-core2 {
-    width: 33.33%;
-    background-image: url(images/core2.jpg);
-    background-size: 80%;
-    background-repeat: no-repeat;
+    width: 20;
+    
     font-family: 'IM Fell English', serif;
     font-size: 20px;
     color: rgb(240, 255, 250);
-    text-align: left;
+    text-align: center;
     
 }
 .col-core3 {
-    width: 33.33%;
-    background-image: url(images/core3.jpg);
-    background-size: 80%;
-    background-repeat: no-repeat;
+    width: 20%;
+   
     font-family: 'IM Fell English', serif;
     font-size: 20px;
     color: ivory;
-    text-align: left;
+    text-align: center;
     
 }
 hr {
@@ -105,7 +90,60 @@ hr {
         border:none !important;
 }
 a:hover {
-    font-size: 30px;
+    font-size: 40px;
   }
 
   
+  .row2{
+    width: 100%;
+    display: flex;
+    height: 300px;
+    column-gap: normal;
+  }
+  
+  
+  
+  .col-tech4 {
+    width: 20%;
+    
+    font-family: 'IM Fell English', serif;
+    font-size: 30px;
+    color: ivory;
+    text-align: center;
+  }
+
+  .col-tech5 {
+    width: 20%;
+   
+    font-family: 'IM Fell English', serif;
+    font-size: 30px;
+    color: ivory;
+    text-align: center;  
+
+  }
+
+.col-tech6 {
+        width: 20%;
+        
+        font-family: 'IM Fell English', serif;
+        font-size: 30px;
+        color: ivory;
+        text-align: center;
+      }
+    
+  .col-tech7 {
+        width: 20%;
+        
+        font-family: 'IM Fell English', serif;
+        font-size: 30px;
+        color: ivory;
+        text-align: center;  
+
+
+  }
+
+  html {
+      background-image: url(images/blogbckgr1.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
+  }
